--- a/style.css
+++ b/style.css
@@ -183,10 +183,11 @@ hr{
   main{
     width: 100%;
   }
-  .players{
+  .players,.blogs,.courses{
     display: grid;
     grid-template-columns: repeat(1,1fr);
     grid-row-gap:30px;
     margin-bottom: 16px;
   }
+
 }
