--- a/style.css
+++ b/style.css
@@ -146,8 +146,8 @@ hr{
   padding: 20px;
   border-radius: 20px;
   box-shadow: 1px 2px 2px 1px gray ;
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 .course h3{
   font-size: 20px;
@@ -210,22 +210,52 @@ hr{
   .rating-text{
     
     margin-left:5px ;
-    font-size: 14px;
+    font-size: 12px;
   }
   .time{
-    font-size: 14px;
+    font-size: 12px;
   }
   .star{
     margin-right: 5px;
-    font-size: 14px;
+    font-size: 12px;
   }
   .course{
     
-    margin-right: 10px;
-    margin-left: 10px;
+    margin-right: 5px;
+    margin-left: 5px;
     
    
    }
   
+
+}
+@media only screen and (max-width:480px) and (min-width:380px){
+  .rating-text{
+    
+    margin-left:5px ;
+    font-size: 12px;
+  }
+  .time{
+    font-size: 12px;
+  }
+  .star{
+    margin-right: 5px;
+    font-size: 12px;
+  }
+  .course{
+    
+    margin-right: 5px;
+    margin-left: 5px;
+    
+   
+   }
+   #golden{
+    color: #FFC014;
+    font-size: 10px;
+  }
+  #blur{
+    color: #D1D1D1;
+    font-size: 10px;
+  }
 
 }
