--- a/style.css
+++ b/style.css
@@ -226,6 +226,14 @@ hr{
     
    
    }
+   #golden{
+    color: #FFC014;
+    font-size: 14px;
+  }
+  #blur{
+    color: #D1D1D1;
+    font-size: 14px;
+  }
   
 
 }
@@ -233,14 +241,14 @@ hr{
   .rating-text{
     
     margin-left:5px ;
-    font-size: 12px;
+    font-size: 16px;
   }
   .time{
-    font-size: 12px;
+    font-size: 16px;
   }
   .star{
     margin-right: 5px;
-    font-size: 12px;
+    font-size: 16px;
   }
   .course{
     
@@ -251,11 +259,11 @@ hr{
    }
    #golden{
     color: #FFC014;
-    font-size: 10px;
+    font-size: 14px;
   }
   #blur{
     color: #D1D1D1;
-    font-size: 10px;
+    font-size: 14px;
   }
 
 }
